Fix: Simplify Railway deployment configuration
- Create railpack.toml for Railway build configuration
- Add server-simple.js with minimal dependencies
- Update package.json to use simplified server
- Remove complex workspace dependencies for Railway
- Add fallback HTML for demo deployment
- Ensure Railway can find and run the start command

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "voxlink-virtual-numbers",
   "version": "1.0.0",
   "description": "VoxLink Virtual Phone Number Management System",
-  "main": "server.js",
+  "main": "server-simple.js",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
-    "start": "node server.js",
+    "start": "node server-simple.js",
     "build": "npm run build --workspaces",
     "test": "npm run test --workspaces",
     "test:unit": "jest --config=jest.config.js",
