--- a/railway.toml
+++ b/railway.toml
@@ -1,19 +1,14 @@
 [build]
-builder = "NIXPACKS"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile.railway"
 
 [build.env]
 NODE_ENV = "production"
 
 [deploy]
-startCommand = "node server-simple.js"
 healthcheckPath = "/api/health"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-
-[services]
-[services.app]
-buildCommand = "echo 'Build completed'"
-startCommand = "node server-simple.js"
 
 [[services.app.tcpPorts]]
 port = "3000"
