--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -7,7 +7,7 @@ COPY package.json ./
 
 RUN npm install --omit=dev
 
-COPY server-simple.js ./
+COPY server.js ./
 
 RUN addgroup -g 1001 -S nodejs && \
     adduser -S voxlink -u 1001 && \
@@ -20,4 +20,4 @@ EXPOSE 8080
 ENV PORT=8080
 ENV NODE_ENV=production
 
-CMD ["node", "server-simple.js"]
+CMD ["node", "server.js"]
